# BudgetTracker

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json
backend/: Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_simplefin_integration.sql
backend/src/: app_state.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs  scheduler.rs  simplefin.rs  sync.rs
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/account/[type]/[id]/: page.tsx
frontend/src/components/: AccountCard.tsx  SpendingChart.tsx  TransactionList.tsx
frontend/src/context/: AccountsProvider.tsx
frontend/src/lib/: api.ts
scripts/: claim_access_token.py  generate-api.sh
src/: App.tsx
src/components/: AccountCard.tsx  AccountService.ts  Dashboard.tsx  SpendingChart.tsx  TransactionList.tsx
src/context/: AccountsProvider.tsx
src/pages/: AccountDetails.tsx  Dashboard.tsx
