[package]
name = "budget-tracker-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
dotenv = "0.15"
base64 = "0.22"
url = "2.5"

[lib]
name = "budget_tracker_backend"
path = "src/lib.rs"

[[bin]]
name = "budget-tracker-backend"
path = "src/main.rs"

[[bin]]
name = "generate-spec"
path = "src/bin/generate_spec.rs"
